--- a/Checkout.html
+++ b/Checkout.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="flex-grow-1 align-self-center overflow-hidden">
                             <div>
-                                <h5 class="text-truncate font-size-18"><a href="marketplace.html" class="text-dark">HOODIE JAWA METAL (JAMET)</a></h5>
+                                <h5 class="text-truncate font-size-18"><a href="detail.html" class="text-dark">HOODIE JAWA METAL (JAMET)</a></h5>
                                 <p class="text-muted mb-0">Color : <span class="fw-medium">Black</span></p>
                                 <div class="row mt-3">
                                     <div class="col-md-4">
